# simpleapirust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile2  README.md  api-deployment.yaml  api-service.yaml  apm-server copy.yml  apm-server.yml  docker-compose.yaml  index.js  index2.js  index3.js  mysql-deployment.yaml  mysql-service.yaml  package-lock.json  pruebas
fallos/: elapi-deployment.yaml  elapi-service.yaml  elserver-deployment.yaml
kompose/: elapi-deployment.yaml  elserver-deployment.yaml
kompose/intentos/: api-deployment.yaml  api-service.yaml  mysql-deployment.yaml  mysql-service.yaml
kustomize/: apm-server-deployment.yaml  apm-server-service.yaml  elapi-deployment.yaml  elapi-service.yaml  elastic-networkpolicy.yaml  elasticsearch-deployment.yaml  elasticsearch-service.yaml  elserver-claim0-persistentvolumeclaim.yaml  elserver-deployment.yaml  elserver-service.yaml  kibana-deployment.yaml  kibana-service.yaml  kustomization.yaml
src/: db.rs  main.rs
