[package]
name = "rest-api"
version = "0.1.0"
authors = ["Sani <javiersanisidrogarcia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
futures = "0.3.5"
bytes = "0.5.6"
actix-multipart = "0.2.0"
sanitize-filename = "0.2"
r2d2 = "0.8.8"
r2d2_mysql = "*"
chrono = "0.4"
mysql = "*"
